--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>reveal.js</title>
+	<title>MU610A: Acoustics and Psychoacoustics</title>
 
 	<link rel="stylesheet" href="./css/reveal.css">
 	<link rel="stylesheet" href="./css/theme/black.css">
@@ -70,7 +70,10 @@
 			{ src: './plugin/notes/notes.js', async: true },
 			{ src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 			{ src: './plugin/external/external.js', condition: function() { return !!document.querySelector( '[data-external]' ); }}
-		]
+		],
+		history: true
+
+
 	});
 	</script>
 </body>
